// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballSummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa bpMxyE"
  >
    <div
      class="sc-htpNat sc-bxivhb kRDlKQ"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballSummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa bvHEsZ"
  >
    <div
      class="sc-htpNat sc-bxivhb kRDlKQ"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
